# hw_web_13

contacts_api/: main.py  pyproject.toml
contacts_api/src/: schemas.py
contacts_api/src/auths/: auth.py
contacts_api/src/auths/service/: email_verification.py
contacts_api/src/database/: db.py  models.py
contacts_api/src/repository/: repository.py
contacts_api/src/routes/: router.py
quotes_scraper/: Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
quotes_scraper/quotes/: forms.py  models.py  urls.py  utils.py  views.py
quotes_scraper/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py  0003_alter_tag_name.py  0004_remove_author_created_at_author_see_also_and_more.py  0005_remove_quote_created_at_alter_quote_author_and_more.py
quotes_scraper/quotes/static/quotes/: style.css
quotes_scraper/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  author_list.html  base.html  index.html  quote_list.html  search_results.html  tag_detail.html  top_tags.html
quotes_scraper/quotes/templatetags/: extract.py
quotes_scraper/quotes_scraper/: asgi.py  settings.py  urls.py  wsgi.py
quotes_scraper/users/: forms.py  urls.py  views.py
quotes_scraper/users/templates/users/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  signin.html  signup.html
quotes_scraper/utils/: add_quotes_to_mongo.py  authors.json  migration.py  quotes.json
